# avantis-rust-utilities

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: on-push-main.yaml  pr-checker.yaml
avantis-utils-derive/: Cargo.toml
avantis-utils-derive/.github/workflows/: pr-checker.yaml
avantis-utils-derive/src/: lib.rs
avantis-utils-macro/: Cargo.toml
avantis-utils-macro/src/: lib.rs
config/: base.yaml  develop.yaml  development.yaml  production.json  test.toml
examples/: config_simple.rs  kafka_simple.rs  redis_simple.rs
examples/config/: main.rs
src/: config.rs  db.rs  kafka.rs  lib.rs  pagination.rs  redis.rs  telemetry.rs
src/db/: diesel.rs  sqlx.rs
src/kafka/: consumer.rs  kafka.rs  kafka_consumer.rs  kafka_producer.rs  producer.rs
tests/: redis_integration_test.rs
