[package]
authors = ["Avantis - Genesis <it-be-avantis@ava.fund>"]
description = "Swiss army knife utilities for all kind of Avantis rust projects"
edition = "2021"
homepage = "https://github.com/ava-global/avantis-rust-utilities"
keywords = ["utility"]
license = "MIT"
name = "avantis-utils"
readme = "README.md"
repository = "https://github.com/ava-global/avantis-rust-utilities"
version = "0.2.0"

[dependencies]
anyhow = {version = "1.0", optional = true}
async-trait = {version = "0.1.53", optional = true}
bb8-redis = {version = "0.11.0", optional = true}
config = {version = "0.13", optional = true}
redis = {version = "0.21.5", features = ["cluster"], optional = true}
redis_cluster_async = {version = "0.7.0", optional = true}
serde = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
sqlx = {version = "0.5", features = ["postgres", "runtime-tokio-rustls"], optional = true}
strum = {version = "0.24", features = ["derive"], optional = true}
tokio = {version = "1.17.0", features = ["full"], optional = true}
tracing = {version = "0.1.33", optional = true}
flexbuffers = {version = "2.0.0", optional = true}
thiserror = {version = "1.0", optional = true}

[dev-dependencies]
mocktopus = "0.7.11"
once_cell = "1.0"
serial_test = "*"

[features]
cfg = ["config", "strum", "serde", "anyhow"]
db = ["sqlx", "serde"]
default = ["cfg", "db", "redis-utils"]
redis-utils = ["redis", "redis_cluster_async", "bb8-redis", "async-trait", "tracing", "tokio", "serde", "thiserror"]
